2005-12-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc (calc_direction): use default-direction
	iso. get_default_direction()

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	default-direction property.

	* scm/define-grobs.scm (all-grob-descriptions): add MelodyItem.

	* lily/stem.cc (calc_default_direction): remove
	Stem::get_default_direction, use default-direction with callback
	instead.

	* lily/melody-spanner.cc (calc_neutral_stem_direction): 

	* lily/melody-engraver.cc: new file. Acknowledge stems for
	interpolated stem directions. 

	* lily/melody-spanner.cc: new file. Interpolate stem directions.

	* scm/define-grobs.scm (all-grob-descriptions): add MelodyItem

	* lily/slur-configuration.cc (fit_factor): more robust check for
	point in curve X-extent.

	* lily/slur.cc (outside_slur_callback): return offset_scm, not 0.
	(outside_slur_callback): check for 'outside avoidance.

	* lily/slur-configuration.cc (score_extra_encompass): don't use
	bound->column() == avoid->column() for checking extents, as this
	doesn't work for accidentals. 

	* lily/slur-engraver.cc (acknowledge_extra_object): remove
	DynamicText hardcoding.

	* lily/slur-scoring.cc (enumerate_attachments): robustness: don't
	crash if bound stem is NULL

	* lily/piano-pedal-performer.cc: patch by MWD for enabling piano
	pedals.

2005-12-22  Graham Percival  <gpermus@gmail.com>

	* scm/define-markup-commands.scm: typo.  @code{\raise}
	=> @code{\\raise}.

	* darwin.patch: now used again, includes a
	required patch from fink.

2005-12-21  Heikki Junes  <hjunes@cc.hut.fi>

	* po/TODO: mention gtranslator along with kbabel.
	* po/fi.po: update translations.

2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (setup_paths): Bugfix.

2005-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-configuration.cc (score_extra_encompass): don't use
	"avoid" choice for avoid-slur.

	* stepmake/bin/install.py (dest): don't create existing dir.
