@@ -1,5 +1,10 @@
 2005-12-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/melody-engraver.cc (acknowledge_stem): restart MelodyItem
+	on rest.
+
+	* ly/engraver-init.ly: add Melody_engraver
+
 	* lily/beam.cc (calc_direction): use default-direction
 	iso. get_default_direction()
 
